2009-08-02  OKUMURA Yuki <mjt@cltn.org>
	
        * configure.ac : implies port specific options (gc-7.1 win32 threads /
	gc-7.2 will fix this)

2009-07-31  higepon  <higepon@users.sourceforge.jp>

	* StringProcedures.cpp : Fixed string-set didn't check index.
	                         Fixed make-string didn't check size.

	* lib/lambda/wiki.ss : Delete on empty body.

	* lib/lambda/wiki.ss : Added backup function.

	* lib/lambda/wiki.ss : Added spam-block-qustion.

	* lib/mosh/cgi.ss (unauthorized-header): Added.

	* Fixed a behavior of write-to-file when a file doesn't exist.

        * library.scm (open-output-file): Fixed for existing file.

2009-07-30  higepon  <higepon@users.sourceforge.jp>

        * lib/srfi/%3a2/and-let%2a.sls (srfi): Fixed a wrong import on (srfi :2).

2009-07-29  higepon  <higepon@users.sourceforge.jp>

        * r6rs-examples/wiki: Fixed some new features.

        * lib/mosh/cgi.ss (decode): Fixed a bug about make-custom-binary-input-port.

        * test/cgi.scm: Added tests for (mosh cgi).

2009-07-28  higepon  <higepon@users.sourceforge.jp>

        * library.scm (create-mosh-cache-dir): LOCALAPPDATA.

        * Fasl.h (scheme): Added Ratnum and Compnum support.

        * Bignum.h (scheme): Added serialize/deserialize.

2009-07-27  higepon  <higepon@users.sourceforge.jp>

        * library.scm (create-mosh-cache-dir): Now mosh uses /tmp, if HOME not found.

        * lib/memcached.ss : Now memcached-get returns bytevector.

        * Makefile.am (install-data-hook): Fixed permission denied "prefix.txt".

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: Fixed a bug REPL didn't know about mosh-cache-dir. (issue 79).

2009-07-24  OKUMURA Yuki <mjt@cltn.org>

        * configure.ac: x86_64: -msse3, -mfpmath=sse removed.

2009-07-24  higepon  <higepon@users.sourceforge.jp>

        * lib/memcached.ss: Added but undocumented.

        * lib/mosh/cgi.ss (encode): Fixed a bug in encode procedure.
